tests/snapshots/test_runner__tests__compiler__typecheck__shorthand_record_access_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let match = <A, B>(a: A, f: (a: A) => B): B => a.f()

{ a: 2 }.match(.b).print()

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/shorthand_record_access_1.kk:3:17
  │
3 │ { a: 2 }.match(.b).print()
  │                 ^ No such property
  │
  = Available properties:
      a
